<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/game_difficulty"
        android:id="@+id/difficulty"
        android:orderInCategory="0"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/easy"
                android:orderInCategory="0"
                android:title="@string/easy"
                app:showAsAction="never" />
            <item
                android:id="@+id/medium"
                android:orderInCategory="1"
                android:title="@string/medium"
                app:showAsAction="never" />
            <item
                android:id="@+id/hard"
                android:orderInCategory="1"
                android:title="@string/hard"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/about"
        android:orderInCategory="1"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
